# neuraxon-hybrid

./: .gitignore  .swarm-task-status.json  BENCHMARK_RESULTS.md  HARDENING_REPORT.md  README.md  ROADMAP.md  STATUS.md  pyproject.toml
.ralph-state/: ralph.db
benchmarks/: README.md  analyze_results.py  run_holdout_generalization.py
dashboard/: index.html
data/: README.md  poc_input_example.json  poc_output_example.json
docs/: AGI_CONTEXT_2026-02-27.md  API_COMPAT_V1_V2.md  CLAIM_EVAL_001.md  CLAIM_EVAL_002.md  CLAIM_MATRIX.md  DASHBOARD_DATA_FLOW.md  DRY_RUN_001.md  GO_NO_GO.md  GO_NO_GO_SCORECARD_001.md  MLFLOW_MATRIX_PILOT_001.md  MLFLOW_SMOKE_001.md  OPENML_DRIFT_MINIRUN_001.md  OTEL_PILOT_001.md  PDF_NOTES.md  PLAN_SHORT_MID_TERM.md  POC_INTEGRATION_001.md  QUBIC_ECOSYSTEM_ANALYSIS_001.md  QUBIC_NEWSLETTER_2026-03-02.md  RESEARCH_FRONTIER_001.md  RUN_SHEET_PHASE1_2.md  SHADOW_ORCHESTRATOR_SIDECAR_001.md  SIDECAR_PHASE1_OBSERVER_001.md  SWARM_AUTOPILOT_QUEUE.json  SWARM_REPORT_PHASE2_BOOTSTRAP.md  TEST_PROTOCOL_PHASE1_2.md
examples/: basic_agent_loop.py
logs/: smoke_summary.json  upstream_tests_no_pytest.json
plugins/: README.md
scripts/: README.md  check_claim_gate.sh  claim_gate.py  export_summary_json.py  poc_wrapper.py  run_matrix.py  run_matrix_mlflow.sh  run_mlflow_smoke.py  run_openml_subset.py  run_upow_probe.py  run_upstream_tests_no_pytest.py  serve_dashboard.py  smoke_mlflow_slice.sh  smoke_test.py  smoke_v1_v2.py  summarize_claims.py  validate_benchmark_schema.py  validate_matrix_schema.py
sidecar/: README.md  observer.py
(+158 files in other folders)
