[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuraxon-agent"
version = "0.1.0"
description = "Agent integration layer for the Neuraxon upstream library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Seppe Gadeyne"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "mypy>=1.8",
]
visual = [
    "Pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/sisutuulenisa/neuraxon-hybrid"
Repository = "https://github.com/sisutuulenisa/neuraxon-hybrid"

[tool.hatch.build.targets.wheel]
packages = ["src/neuraxon_agent"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[project.scripts]
neuraxon-agent = "neuraxon_agent.cli:main"
